framework/bfl/internal/ingress/e2e/testdata/ephemeral-user.json
{
  "clusters": [
    {
      "name": "profile_service",
      "type": "STRICT_DNS",
      "connectTimeout": "5s",
      "loadAssignment": {
        "clusterName": "profile_service",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "profile-service.user-space-tempuser.svc.cluster.local",
                      "portValue": 3000
                    }
                  }
                }
              }
            ]
          }
        ]
      }
    },
    {
      "name": "app_vault_main",
      "type": "STRICT_DNS",
      "connectTimeout": "5s",
      "loadAssignment": {
        "clusterName": "app_vault_main",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "vault-svc.ns-tempuser.svc.cluster.local",
                      "portValue": 80
                    }
                  }
                }
              }
            ]
          }
        ]
      }
    },
    {
      "name": "nonapp_auth",
      "type": "STRICT_DNS",
      "connectTimeout": "5s",
      "loadAssignment": {
        "clusterName": "nonapp_auth",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "authelia-svc..svc.cluster.local",
                      "portValue": 80
                    }
                  }
                }
              }
            ]
          }
        ]
      }
    },
    {
      "name": "nonapp_desktop",
      "type": "STRICT_DNS",
      "connectTimeout": "5s",
      "loadAssignment": {
        "clusterName": "nonapp_desktop",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "edge-desktop..svc.cluster.local",
                      "portValue": 80
                    }
                  }
                }
              }
            ]
          }
        ]
      }
    },
    {
      "name": "nonapp_wizard",
      "type": "STRICT_DNS",
      "connectTimeout": "5s",
      "loadAssignment": {
        "clusterName": "nonapp_wizard",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "wizard..svc.cluster.local",
                      "portValue": 80
                    }
                  }
                }
              }
            ]
          }
        ]
      }
    },
    {
      "name": "authelia_backend",
      "type": "STRICT_DNS",
      "connectTimeout": "5s",
      "loadAssignment": {
        "clusterName": "authelia_backend",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "authelia-backend.os-framework.svc.cluster.local",
                      "portValue": 9091
                    }
                  }
                }
              }
            ]
          }
        ]
      }
    }
  ],
  "listeners": [
    {
      "name": "https_443",
      "address": {
        "socketAddress": {
          "address": "0.0.0.0",
          "portValue": 443
        }
      },
      "filterChains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "statPrefix": "https_443",
                "rds": {
                  "configSource": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  },
                  "routeConfigName": "https_443_routes"
                },
                "httpFilters": [
                  {
                    "name": "envoy.filters.http.ext_authz",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                      "httpService": {
                        "serverUri": {
                          "uri": "http://authelia_backend",
                          "cluster": "authelia_backend",
                          "timeout": "15s"
                        },
                        "pathPrefix": "/api/authz/ext-authz/",
                        "authorizationRequest": {
                          "allowedHeaders": {
                            "patterns": [
                              {
                                "exact": "host"
                              },
                              {
                                "exact": "authorization"
                              },
                              {
                                "exact": "proxy-authorization"
                              },
                              {
                                "exact": "accept"
                              },
                              {
                                "exact": "cookie"
                              }
                            ]
                          },
                          "headersToAdd": [
                            {
                              "key": "X-Forwarded-Proto",
                              "value": "https"
                            },
                            {
                              "key": "X-BFL-USER",
                              "value": "tempuser"
                            }
                          ]
                        },
                        "authorizationResponse": {
                          "allowedUpstreamHeaders": {
                            "patterns": [
                              {
                                "prefix": "remote-"
                              },
                              {
                                "prefix": "authelia-"
                              }
                            ]
                          },
                          "allowedClientHeaders": {
                            "patterns": [
                              {
                                "exact": "set-cookie"
                              }
                            ]
                          },
                          "allowedClientHeadersOnSuccess": {
                            "patterns": [
                              {
                                "exact": "set-cookie"
                              }
                            ]
                          }
                        }
                      },
                      "transportApiVersion": "V3"
                    }
                  },
                  {
                    "name": "envoy.filters.http.lua",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua",
                      "defaultSourceCode": {
                        "inlineString": "\nlocal PUSH_STATE_SCRIPT = \"\u003cscript\u003e\\n\" ..\n  \"(function () {\\n\" ..\n  \"  if (window.top == window) {\\n\" ..\n  \"    return;\\n\" ..\n  \"  }\\n\" ..\n  \"  const originalPushState = history.pushState;\\n\" ..\n  \"  const pushStateEvent = new Event(\\\"pushstate\\\");\\n\" ..\n  \"  history.pushState = function (...args) {\\n\" ..\n  \"    originalPushState.apply(this, args);\\n\" ..\n  \"    window.dispatchEvent(pushStateEvent);\\n\" [...]
                      }
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "commonHttpProtocolOptions": {
                  "idleTimeout": "1800s"
                },
                "streamIdleTimeout": "1800s",
                "accessLog": [
                  {
                    "name": "envoy.access_loggers.file",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                      "path": "/dev/stdout",
                      "logFormat": {
                        "textFormatSource": {
                          "inlineString": "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% -\u003e %UPSTREAM_HOST% %REQ(:AUTHORITY)% %REQ(:PATH)% %RESPONSE_CODE% duration=%DURATION%ms rx=%BYTES_RECEIVED% tx=%BYTES_SENT% flags=%RESPONSE_FLAGS% route=%ROUTE_NAME% cluster=%UPSTREAM_CLUSTER% details=%RESPONSE_CODE_DETAILS% ufail=%UPSTREAM_TRANSPORT_FAILURE_REASON%\n"
                        }
                      }
                    }
                  }
                ],
                "useRemoteAddress": true,
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ],
                "stripAnyHostPort": true
              }
            }
          ],
          "transportSocket": {
            "name": "envoy.transport_sockets.tls",
            "typedConfig": {
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
              "commonTlsContext": {
                "tlsCertificates": [
                  {
                    "certificateChain": {
                      "inlineString": "CERT"
                    },
                    "privateKey": {
                      "inlineString": "KEY"
                    }
                  }
                ],
                "alpnProtocols": [
                  "http/1.1"
                ]
              }
            }
          }
        }
      ],
      "perConnectionBufferLimitBytes": 32768
    },
    {
      "name": "https_444",
      "address": {
        "socketAddress": {
          "address": "0.0.0.0",
          "portValue": 444
        }
      },
      "filterChains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "statPrefix": "https_444",
                "rds": {
                  "configSource": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  },
                  "routeConfigName": "https_444_routes"
                },
                "httpFilters": [
                  {
                    "name": "envoy.filters.http.ext_authz",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                      "httpService": {
                        "serverUri": {
                          "uri": "http://authelia_backend",
                          "cluster": "authelia_backend",
                          "timeout": "15s"
                        },
                        "pathPrefix": "/api/authz/ext-authz/",
                        "authorizationRequest": {
                          "allowedHeaders": {
                            "patterns": [
                              {
                                "exact": "host"
                              },
                              {
                                "exact": "authorization"
                              },
                              {
                                "exact": "proxy-authorization"
                              },
                              {
                                "exact": "accept"
                              },
                              {
                                "exact": "cookie"
                              }
                            ]
                          },
                          "headersToAdd": [
                            {
                              "key": "X-Forwarded-Proto",
                              "value": "https"
                            },
                            {
                              "key": "X-BFL-USER",
                              "value": "tempuser"
                            }
                          ]
                        },
                        "authorizationResponse": {
                          "allowedUpstreamHeaders": {
                            "patterns": [
                              {
                                "prefix": "remote-"
                              },
                              {
                                "prefix": "authelia-"
                              }
                            ]
                          },
                          "allowedClientHeaders": {
                            "patterns": [
                              {
                                "exact": "set-cookie"
                              }
                            ]
                          },
                          "allowedClientHeadersOnSuccess": {
                            "patterns": [
                              {
                                "exact": "set-cookie"
                              }
                            ]
                          }
                        }
                      },
                      "transportApiVersion": "V3"
                    }
                  },
                  {
                    "name": "envoy.filters.http.lua",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua",
                      "defaultSourceCode": {
                        "inlineString": "\nlocal PUSH_STATE_SCRIPT = \"\u003cscript\u003e\\n\" ..\n  \"(function () {\\n\" ..\n  \"  if (window.top == window) {\\n\" ..\n  \"    return;\\n\" ..\n  \"  }\\n\" ..\n  \"  const originalPushState = history.pushState;\\n\" ..\n  \"  const pushStateEvent = new Event(\\\"pushstate\\\");\\n\" ..\n  \"  history.pushState = function (...args) {\\n\" ..\n  \"    originalPushState.apply(this, args);\\n\" ..\n  \"    window.dispatchEvent(pushStateEvent);\\n\" [...]
                      }
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "commonHttpProtocolOptions": {
                  "idleTimeout": "1800s"
                },
                "streamIdleTimeout": "1800s",
                "accessLog": [
                  {
                    "name": "envoy.access_loggers.file",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                      "path": "/dev/stdout",
                      "logFormat": {
                        "textFormatSource": {
                          "inlineString": "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% -\u003e %UPSTREAM_HOST% %REQ(:AUTHORITY)% %REQ(:PATH)% %RESPONSE_CODE% duration=%DURATION%ms rx=%BYTES_RECEIVED% tx=%BYTES_SENT% flags=%RESPONSE_FLAGS% route=%ROUTE_NAME% cluster=%UPSTREAM_CLUSTER% details=%RESPONSE_CODE_DETAILS% ufail=%UPSTREAM_TRANSPORT_FAILURE_REASON%\n"
                        }
                      }
                    }
                  }
                ],
                "useRemoteAddress": true,
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ],
                "stripAnyHostPort": true
              }
            }
          ],
          "transportSocket": {
            "name": "envoy.transport_sockets.tls",
            "typedConfig": {
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
              "commonTlsContext": {
                "tlsCertificates": [
                  {
                    "certificateChain": {
                      "inlineString": "CERT"
                    },
                    "privateKey": {
                      "inlineString": "KEY"
                    }
                  }
                ],
                "alpnProtocols": [
                  "http/1.1"
                ]
              }
            }
          }
        }
      ],
      "perConnectionBufferLimitBytes": 32768,
      "listenerFilters": [
        {
          "name": "envoy.filters.listener.proxy_protocol",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol"
          }
        }
      ]
    }
  ],
  "routes": [
    {
      "name": "https_443_routes",
      "virtualHosts": [
        {
          "name": "profile",
          "domains": [
            "snowinning.com",
            "snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "profile_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "profile_service",
                "timeout": "300s"
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "app_vault_main",
          "domains": [
            "vault-tempuser.snowinning.com",
            "vault-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "default_vault_main",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "app_vault_main",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "nonapp_auth",
          "domains": [
            "auth-tempuser.snowinning.com",
            "auth-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "nonapp_auth_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "nonapp_auth",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "nonapp_desktop",
          "domains": [
            "desktop-tempuser.snowinning.com",
            "desktop-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "nonapp_desktop_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "nonapp_desktop",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "nonapp_wizard",
          "domains": [
            "wizard-tempuser.snowinning.com",
            "wizard-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "nonapp_wizard_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "nonapp_wizard",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "default",
          "domains": [
            "*"
          ],
          "routes": [
            {
              "name": "ping",
              "match": {
                "path": "/ping"
              },
              "directResponse": {
                "status": 200,
                "body": {
                  "inlineString": "pong"
                }
              },
              "responseHeadersToAdd": [
                {
                  "header": {
                    "key": "content-type",
                    "value": "text/plain"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            },
            {
              "match": {
                "prefix": "/"
              },
              "directResponse": {
                "status": 421,
                "body": {
                  "inlineString": "\u003ch1\u003e\u003ca href='https://www.olares.com/'\u003eOlares\u003c/a\u003e\u003c/h1\u003e"
                }
              }
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "Accept, Content-Type, Accept-Encoding"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "GET, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-origin",
                "value": "*"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        }
      ],
      "requestHeadersToAdd": [
        {
          "header": {
            "key": "X-Forwarded-Host",
            "value": "%REQ(:AUTHORITY)%"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        },
        {
          "header": {
            "key": "X-Forwarded-Proto",
            "value": "https"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        },
        {
          "header": {
            "key": "X-Real-IP",
            "value": "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        },
        {
          "header": {
            "key": "X-Original-Forwarded-For",
            "value": "%REQ(X-FORWARDED-FOR)%"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        }
      ]
    },
    {
      "name": "https_444_routes",
      "virtualHosts": [
        {
          "name": "profile",
          "domains": [
            "snowinning.com",
            "snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "profile_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "profile_service",
                "timeout": "300s"
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "app_vault_main",
          "domains": [
            "vault-tempuser.snowinning.com",
            "vault-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "default_vault_main",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "app_vault_main",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "nonapp_auth",
          "domains": [
            "auth-tempuser.snowinning.com",
            "auth-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "nonapp_auth_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "nonapp_auth",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "nonapp_desktop",
          "domains": [
            "desktop-tempuser.snowinning.com",
            "desktop-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "nonapp_desktop_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "nonapp_desktop",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "nonapp_wizard",
          "domains": [
            "wizard-tempuser.snowinning.com",
            "wizard-tempuser.snowinning.olares.local"
          ],
          "routes": [
            {
              "name": "nonapp_wizard_root",
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "nonapp_wizard",
                "timeout": "300s",
                "upgradeConfigs": [
                  {
                    "upgradeType": "websocket"
                  },
                  {
                    "upgradeType": "tailscale-control-protocol"
                  }
                ]
              },
              "metadata": {
                "filterMetadata": {
                  "envoy.filters.http.lua": {
                    "language": "en"
                  }
                }
              },
              "requestHeadersToAdd": [
                {
                  "header": {
                    "key": "X-BFL-USER",
                    "value": "tempuser"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "access-control-allow-headers,access-control-allow-methods,access-control-allow-origin,content-type,x-auth,x-unauth-error,x-authorization"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "PUT, GET, DELETE, POST, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        },
        {
          "name": "default",
          "domains": [
            "*"
          ],
          "routes": [
            {
              "name": "ping",
              "match": {
                "path": "/ping"
              },
              "directResponse": {
                "status": 200,
                "body": {
                  "inlineString": "pong"
                }
              },
              "responseHeadersToAdd": [
                {
                  "header": {
                    "key": "content-type",
                    "value": "text/plain"
                  },
                  "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
                }
              ]
            },
            {
              "match": {
                "prefix": "/"
              },
              "directResponse": {
                "status": 421,
                "body": {
                  "inlineString": "\u003ch1\u003e\u003ca href='https://www.olares.com/'\u003eOlares\u003c/a\u003e\u003c/h1\u003e"
                }
              }
            }
          ],
          "responseHeadersToAdd": [
            {
              "header": {
                "key": "access-control-allow-headers",
                "value": "Accept, Content-Type, Accept-Encoding"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-methods",
                "value": "GET, OPTIONS"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            },
            {
              "header": {
                "key": "access-control-allow-origin",
                "value": "*"
              },
              "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
            }
          ],
          "typedPerFilterConfig": {
            "envoy.filters.http.ext_authz": {
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute",
              "disabled": true
            }
          }
        }
      ],
      "requestHeadersToAdd": [
        {
          "header": {
            "key": "X-Forwarded-Host",
            "value": "%REQ(:AUTHORITY)%"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        },
        {
          "header": {
            "key": "X-Forwarded-Proto",
            "value": "https"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        },
        {
          "header": {
            "key": "X-Real-IP",
            "value": "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        },
        {
          "header": {
            "key": "X-Original-Forwarded-For",
            "value": "%REQ(X-FORWARDED-FOR)%"
          },
          "appendAction": "OVERWRITE_IF_EXISTS_OR_ADD"
        }
      ]
    }
  ]
}
